added turso as a sqlite db provider

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ DISCORD_WEBHOOK_URL=your_discord_webhook_url
 # Server Configuration
 APP_EXTERNAL_URL=your_application_public_base_url
 PORT=3000
+
+# database config
+TURSO_DATABASE_URL=your_db_url
+TURSO_AUTH_TOKEN=your_db_token
