--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@tursodatabase/serverless": "^0.1.3",
     "discord.js": "^14.22.1"
   }
 }
