--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tursodatabase/serverless": "^0.1.3",
+    "canvas": "^3.2.0",
     "discord.js": "^14.22.1"
   }
 }
