testing out bot interaction

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ CONCEPT2_CLIENT_SECRET=your_concept2_client_secret
 # Discord Configuration
 DISCORD_WEBHOOK_URL=your_discord_webhook_url
 
+## Discord bot configurations
+DISCORD_BOT_OAUTH_CLIENT_ID=your_discord_oauth_client_id
+DISCORD_BOT_OAUTH_SECRET=your_discord_oauth_secret
+DISCORD_BOT_TOKEN=your_discord_bot_token
+DISCORD_BOT_APP_ID=your_discord_app_id
+DISCORD_BOT_APP_PUBLIC_KEY=your_discord_app_public_key
+
 # Server Configuration
 APP_EXTERNAL_URL=your_application_public_base_url
 PORT=3000
